[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-db_mysql"
version = "0.10.0"
description = "Tool to manage development environments for web applications using containers - MySQL Database Drvier"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "riptide-lib >= 0.10, < 0.11",
    "schema >= 0.7"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-db-mysql"
Documentation = "https://riptide-docs.readthedocs.io"

[project.entry-points."riptide.db_driver"]
mysql = "riptide_db_mysql.mysql:MySQLDbDriver"
