[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-db_mysql"
version = "0.10.0"
description = "Tool to manage development environments for web applications using containers - MySQL Database Drvier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "riptide-lib >= 0.10, < 0.11",
    "schema >= 0.7"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-db-mysql"
Documentation = "https://riptide-docs.readthedocs.io"

[project.entry-points."riptide.db_driver"]
mysql = "riptide_db_mysql.mysql:MySQLDbDriver"

[tool.ruff]
line-length = 120

[tools.ruff.lint]
select = ["W", "E", "F", "ARG"]

[tool.mypy]
warn_unused_configs = true
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "schema",
]
ignore_missing_imports = true
